more debuging of mismatches in page expiry