@@ -72,6 +72,7 @@
 				<version>3.7.0</version>
 				<configuration>
 					<release>${java.version}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
